# seplin

./: .gitignore  LICENSE  README.md  TODO  build.sh  compile_scheme  inex_file_format.txt  prog.sep  prog.sp  seplin_file_format.txt  truckconfig.json
compiler/: absyn.ml  ass_compile.sh  assemblyLexer.ml  assemblyLexer.mll  assemblyParser.ml  assemblyParser.mli  assemblyParser.mly  assemblyWriter.ml  compile.sh  compile_assm.sh  compiler.ml  dune-project  exceptions.ml  helpers.ml  inexc.opam  lexer.ml  lexer.mll  parser.ml  parser.mli  parser.mly  programRep.ml  seplinc.opam  test.ml  toProgramRep.ml  typing.ml
compiler/example_programs/: assm_test.ixa  call.ixa  fib_fac.ixa  free.ixa  generic.ix  globals.ixa  list.ix  loops.ix  opt.ix  read.ix  stack.ix  struct_test.ix  test.ix  transfer.ixa  tree.ix  type.ix
compiler/example_programs/graphing/: f1.ix  f2.ix  f3.ix
compiler/lib/: absyn.ml  assemblyLexer.mll  assemblyParser.mly  assemblyWriter.ml  dune  exceptions.ml  flags.ml  helpers.ml  lexer.mll  optimize.ml  parser.mly  programRep.ml  toProgramRep.ml  transpile.ml  typing.ml
compiler/src/: dune  inexc.ml  seplinc.ml
documentation/: Expressions.md  HelloWorlds.md  StatementsAndDeclarations.md  Toplevel.md  Types.md  TypesAndProtection.md
example_programs/: add_two.sep  generic.ix  prot.ix  prot.sp  struct_test.sp  test.ix  type.ix  type.sp
machine/: ISA.c  ISA.h  commands.c  commands.h  compile.sh  defs.h  disass.c  disass.h  file_analysis.c  file_analysis.h  inex.c  input.c  input.h  instructions.h  ixc_spec  memory.c  memory.h  seplin.c  types.c  (+2 more)
(+17 files in other folders)
